Updated recipe & back to top link

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>The Web Fundamentals Palace</title>
 </head>
 <body>
-  <header>
+  <header id="top">
     <h1>The Web Fundamentals Palace</h1>
     <p>Hover over the family members below and take a peak into the lives of those living at the Web Fundamentals Palace.</p>
   </header>
@@ -25,7 +25,7 @@
       <article>
         <h2>Queen Queenie</h2>
         <img src="images\queen.jpg" alt="Queen Queenie">
-        <p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click here to see my favourite quiche recipe. <a href="https://www.bbc.co.uk/food/recipes/quichelorraine_71987" target="_blank">Here</a></p>
+        <p>My name is Queenie and I am the Queen. I like quizzes and quiche. Click here to see my favourite quiche recipe. <a href="https://www.jamieoliver.com/recipes/eggs-recipes/scotch-quail-eggs/" target="_blank">Here</a></p>
       </article>
     </section>
 
@@ -58,7 +58,10 @@
         <p>I am King Kieran's Mistress and Mother to the illigitimate Princess</p>
       </article>
     </section>
-
   </main>
+
+  <footer>
+    <a href="#top">Back to top</a>
+  </footer>
 </body>
 </html>
